--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <section>
+        <section class="head">
             <div>
                 <h1>
                     The Greatest show on the earth
@@ -24,13 +24,72 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi porro perspiciatis nemo ullam, nobis
                     magni voluptatum laboriosam. Perspiciatis, mollitia placeat?
                 </p>
-                <a href="google.com">Watch live<i class="fa-thin fa-chevron-right"></i></a>
+                <a class="link" href="google.com">Watch live<i class="fa-thin fa-chevron-right"></i></a>
             </div>
-            <div>
+            <div class="responsive">
                 <img class="img-flued" src="assets/Banner Image.png" alt="barnar img">
             </div>
         </section>
     </header>
+    <main>
+        <section class="main">
+            <div class="input-box">
+                <a class="link-3" href="google.com">Upcomming match</a><a class="link-3" href="google.com">All
+                    Group</a><a class="link-4" href="google.com">blog</a>
+            </div>
+            <div class="grid">
+                <div class="pic"><img src="assets/Blog Image.png" alt="">
+                    <button>transfer</button>
+                    <p>Transfer Live: Chlesea in talks
+                        over Kimpenbe transfer</p>
+                </div>
+                <div class="pic"><img src="assets/Blog Image.png" alt="">
+                    <button>transfer</button>
+                    <p>Transfer Live: Chlesea in talks
+                        over Kimpenbe transfer</p>
+                </div>
+                <div class="pic"><img src="assets/Blog Image.png" alt="">
+                    <button>transfer</button>
+                    <p>Transfer Live: Chlesea in talks
+                        over Kimpenbe transfer</p>
+                </div>
+                <div class="pic"><img src="assets/Blog Image.png" alt="">
+                    <button>transfer</button>
+                    <p>Transfer Live: Chlesea in talks
+                        over Kimpenbe transfer</p>
+                </div>
+                <div class="pic"><img src="assets/Blog Image.png" alt="">
+                    <button>transfer</button>
+                    <p>Transfer Live: Chlesea in talks
+                        over Kimpenbe transfer</p>
+                </div>
+                <div class="pic"><img src="assets/Blog Image.png" alt="">
+                    <button>transfer</button>
+                    <p>Transfer Live: Chlesea in talks
+                        over Kimpenbe transfer</p>
+                </div>
+                <div class="pic"><img src="assets/Blog Image.png" alt="">
+                    <button>transfer</button>
+                    <p>Transfer Live: Chlesea in talks
+                        over Kimpenbe transfer</p>
+                </div>
+                <div class="pic"><img src="assets/Blog Image.png" alt="">
+                    <button>transfer</button>
+                    <p>Transfer Live: Chlesea in talks
+                        over Kimpenbe transfer</p>
+                </div>
+                <div class="pic"><img src="assets/Blog Image.png" alt="">
+                    <button>transfer</button>
+                    <p>Transfer Live: Chlesea in talks
+                        over Kimpenbe transfer</p>
+                </div>
+
+
+
+            </div>
+
+        </section>
+    </main>
 </body>
 
 </html>
