--- a/index.html
+++ b/index.html
@@ -90,6 +90,21 @@
 
         </section>
     </main>
+    <footer>
+        <section class="lasts">
+            <div class="last">
+                <div class="foot">
+                    <h2 class="goal">
+                        Goal
+                    </h2>
+                </div>
+                <div class="sesh">
+                    <span>contuct us</span><span>terms of service</span><span>privacy policy</span><span>policy
+                        settings</span><span>goal app</span><span>goal live</span>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 
 </html>
